resources are included in docker build; write might not be working tho